@@ -1460,8 +1460,7 @@ void free_instruments(int reload_default_inst)
     ToneBank *bank;
     Instrument *ip;
     struct InstrumentCache *default_entry;
-    int default_entry_addr;;
-
+    int default_entry_addr;
 
     clear_magic_instruments();
 
@@ -1490,10 +1489,9 @@ void free_instruments(int reload_default_inst)
 		    free_instrument(ip);
 		bank->tone[j].instrument = NULL;
 	    }
-	 if( (drumset[i] != NULL) && (drumset[i]->alt != NULL))
-    	{
-		free(drumset[i]->alt);
-		drumset[i]->alt=NULL;
+		if ((drumset[i] != NULL) && (drumset[i]->alt != NULL)) {
+			free(drumset[i]->alt);
+			drumset[i]->alt = NULL;
 		}
     }
 
